# ProductService

./: .env  pyproject.toml
06_prototype_to_production/00_prototyping/03_running_llama_3_1_on_colab/: Ollama.ipynb
product_service/: consumer_kafka.py  data_b.py  kafka_topic.py  main.py  producer_kafka.py  product.proto
